--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
     <title>Caritas Auxilium</title>
 </head>
 
 <body>
     <div class="container">
-        <section id="landing-page">
-            <img src="caritas_logo.png" alt="Caritas Auxilium Act on Human Needs" id="hero-logo">
-            <p>Humanitarian Crisis & Disaster Donation App</p>
-        </section>
+
+        <header class="header" role="banner">
+            <h1>Caritas Auxilium</h1>
+            <nav>
+                <ul>
+                    <li>Register</li>
+                    <li>Login</li>
+                </ul>
+            </nav>
+        </header>
+        <main class="content">
+            <section class="landing-page">
+
+                <img class="hero-img" src="caritas_logo.png" alt="Caritas Auxilium Logo">
+                <p>Humanitarian Crisis & Disaster Donation App</p>
+                <button class="start-btn">start</button>
+            </section>
+
+        </main>
+
+        <footer class="footer" role="contentinfo">
+            <div>2018 &copy; Andreas Soedharto</div>
+        </footer>
+
     </div>
 </body>
 
