added login functionality

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
         <header class="header" role="banner">
             <h1>Caritas Auxilium</h1>
-            <nav>
+            <nav class="headbar">
                 <ul>
                     <li id="register">Register</li>
                     <li id="login">Login</li>
@@ -67,7 +67,7 @@
             </section>
 
             <section class="login-page">
-                <form class="login-page">
+                <form class="login-form">
                     <fieldset>
                         <legend>Login</legend>
                         <div class="form-group">
@@ -81,6 +81,10 @@
                         <button class="login-btn" type="submit">login</button>
                     </fieldset>
                 </form>
+            </section>
+
+            <section class="main-page">
+                <p>Hello World</p>
             </section>
         </main>
 
