--- a/public/index.html
+++ b/public/index.html
@@ -86,8 +86,9 @@
             <section class="main-page">
                 <nav class="sidebar">
                     <ul>
+                        <li id="new-crisis">Recent Crisis</li>
+                        <li id="crisis">My Crisis</li>
                         <li id="donations">My Donations</li>
-                        <li id="charities">My Charities</li>
                         <li id="account">My Account</li>
                         <li id="reports">My Reports</li>
                         <li id="logout">Logout</li>
@@ -102,6 +103,43 @@
                         </div>
                         <div class="crisis-container">
 
+                        </div>
+                    </section>
+
+                    <section class="my-crisis">
+                        <div class="form-group">
+                            <label for="searchMyCrisis">Search my crisis</label>
+                            <input type="text" id="searchMyCrisis" name="searchMyCrisis">
+                            <button class="search-btn">search</button>
+                        </div>
+                        <div class="my-crisis-container">
+
+                        </div>
+                        <div class="donation-page">
+                            <form class="donation-form">
+                                <fieldset>
+                                    <legend>Donate your $$$</legend>
+                                    <h4 id="crisisTitleDP"></h4>
+                                    <p id="crisisDateDP"></p>
+                                    <p id="IDkeeper">Unfortunately, there are no API for charity available. So, a good old
+                                        fashioned googling is the way to donate, When you are done, go back here and keep
+                                        record of it.</p>
+                                    <div class="form-group">
+                                        <label for="charityName">Charity Name</label>
+                                        <input type="text" id="charityName" name="charityName">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="donationAmount">Donation Amount</label>
+                                        <input type="number" id="donationAmount" name="donationAmount">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="confirmationNumber">Confirmation Number</label>
+                                        <input type="text" id="confirmationNumber" name="confirmationNumber">
+                                    </div>
+                                    <button type="submit">create</button>
+                                    <button class="cancel-donate-btn">cancel</button>
+                                </fieldset>
+                            </form>
                         </div>
                     </section>
 
