added donations page

--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
                                     <h4 id="crisisTitleDP"></h4>
                                     <p id="crisisDateDP"></p>
                                     <p id="IDkeeper">Unfortunately, there are no API for charity available. So, a good old
-                                        fashioned googling is the way to donate, When you are done, go back here and keep
+                                        fashioned googling is the way to donate. When you are done, go back here and keep
                                         record of it.</p>
                                     <div class="form-group">
                                         <label for="charityName">Charity Name</label>
@@ -136,10 +136,21 @@
                                         <label for="confirmationNumber">Confirmation Number</label>
                                         <input type="text" id="confirmationNumber" name="confirmationNumber">
                                     </div>
-                                    <button type="submit">create</button>
-                                    <button class="cancel-donate-btn">cancel</button>
+                                    <button class="create-donation-btn" type="submit">create</button>
+                                    <button class="cancel-donation-btn">cancel</button>
                                 </fieldset>
                             </form>
+                        </div>
+                    </section>
+
+                    <section class="my-donation">
+                        <div class="form-group">
+                            <label for="searchMyDonation">Search my donation</label>
+                            <input type="text" id="searchMyDonation" name="searchMyDonation">
+                            <button class="search-btn">search</button>
+                        </div>
+                        <div class="my-donation-container">
+
                         </div>
                     </section>
 
