updated client and server

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                             <button class="search-btn">search</button>
                         </div>
                         <div class="crisis-container">
-
+                            <!-- RECENT CRISIS GOES HERE -->
                         </div>
                     </section>
 
@@ -113,7 +113,7 @@
                             <button class="search-btn">search</button>
                         </div>
                         <div class="my-crisis-container">
-
+                            <!-- USER CRISIS GOES HERE -->
                         </div>
                         <div class="donation-page">
                             <form class="donation-form">
@@ -136,7 +136,7 @@
                                         <label for="confirmationNumber">Confirmation Number</label>
                                         <input type="text" id="confirmationNumber" name="confirmationNumber">
                                     </div>
-                                    <button class="create-donation-btn" type="submit">create</button>
+                                    <button class="submit-btn" type="submit">submit</button>
                                     <button class="cancel-donation-btn">cancel</button>
                                 </fieldset>
                             </form>
@@ -150,12 +150,33 @@
                             <button class="search-btn">search</button>
                         </div>
                         <div class="my-donation-container">
-
+                            <!-- USER DONATION GOES HERE -->
+                        </div>
+                        <div class="donation-update-page">
+                            <form class="donation-update-form">
+                                <fieldset id="IDUpdater">
+                                    <legend>Update your $$$</legend>
+                                    <div class="form-group">
+                                        <label for="charityUpdate">Charity Name</label>
+                                        <input type="text" id="charityUpdate" name="charityUpdate">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="amountUpdate">Donation Amount</label>
+                                        <input type="number" id="amountUpdate" name="amountUpdate">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="confNumUpdate">Confirmation Number</label>
+                                        <input type="text" id="confNumUpdate" name="confNumUpdate">
+                                    </div>
+                                    <button class="submit-btn" type="submit">submit</button>
+                                    <button class="cancel-update-btn">cancel</button>
+                                </fieldset>
+                            </form>
                         </div>
                     </section>
 
                     <section class="my-account">
-
+                        <!-- USER ACCOUNT DETAILS GOES HERE -->
                     </section>
                 </div>
             </section>
