added comments on client

--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,16 @@
                     </section>
 
                     <section class="my-account">
-                        <!-- USER ACCOUNT DETAILS GOES HERE -->
+                        <div class="my-account-container">
+                            <!-- USER ACCOUNT DETAILS GOES HERE -->
+                        </div>
+                        <div class="account-update-page">
+
+                        </div>
+                    </section>
+
+                    <section class="my-report">
+                        <p>Under Construction</p>
                     </section>
                 </div>
             </section>
