added account functionality

--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,25 @@
                             <!-- USER ACCOUNT DETAILS GOES HERE -->
                         </div>
                         <div class="account-update-page">
-
+                            <form class="account-update-form">
+                                <fieldset>
+                                    <legend>Customize Your Account</legend>
+                                    <div class="form-group">
+                                        <label for="updateFirstName">First Name</label>
+                                        <input type="text" id="updateFirstName" name="updateFirstName">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="updateLastName">Last Name</label>
+                                        <input type="text" id="updateLastName" name="updateLastName">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="updateEmail">Email</label>
+                                        <input type="email" id="updateEmail" name="updateEmail">
+                                    </div>
+                                    <button class="submit-btn" type="submit">submit</button>
+                                    <button class="cancel-account-update">cancel</button>
+                                </fieldset>
+                            </form>
                         </div>
                     </section>
 
