--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,14 @@
                     </section>
 
                     <section class="my-report">
-                        <p>Under Construction</p>
+                        <div class="form-group">
+                            <label for="reportYear">Pull Report by Year</label>
+                            <input type="number" min="2000" id="reportYear" name="reportYear">
+                            <button class="pull-report-btn">pull</button>
+                        </div>
+                        <div class="my-report-container">
+                            <canvas id="myChart" width="400" height="400"></canvas>
+                        </div>
                     </section>
                 </div>
             </section>
@@ -214,9 +221,9 @@
         </footer>
 
     </div>
-
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="client.js"></script>
 </body>
